Refactor code structure for improved readability and maintainability

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY backend /app/backend
 COPY docs /app/docs
-ENV MODEL_PATH="/app/docs/malaria_mlp_model(1).pkl"
+ENV MODEL_PATH="/app/docs/malaria_mlp_model.pkl"
 # Optional for when I add them:
 # ENV SCALER_PATH="/app/backend/models/scaler_site_year.joblib"
 ENV MODEL_META_PATH="/app/backend/models/model_meta.json"
