--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,7 @@ pandas==2.2.2
 numpy==1.26.4
 scikit-learn==1.3.2
 joblib==1.3.2
-tensorflow==2.15.0
+
+tensorflow-cpu==2.16.1
+keras==3.4.1
+h5py==3.11.0
